fix: Navbar components spacing fixed on collapse

--- a/src/components/NavbarComponent.css
+++ b/src/components/NavbarComponent.css
@@ -12,8 +12,7 @@
   background: none;
   border: none;
   color: black;
-  margin-left: 15px;
-  padding: 0.5rem 1rem;
+
   font-size: 1.25rem;
 }
 
